# ai-micro-api-doc

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.mac  Makefile  docker-compose.mac.yml  docker-compose.yml  pyproject.toml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
app/: __init__.py  main.py
app/core/: __init__.py  config.py  database.py  model_settings_client.py  security.py
app/middleware/: permission_denial_middleware.py
app/models/: __init__.py
app/routers/: __init__.py  internal_process.py  ocr.py  process.py
app/schemas/: __init__.py  documents.py
app/services/: __init__.py  audit_client.py
app/services/processor/: __init__.py  base.py  custom_ocr_processor.py  docling_processor.py  document_structure_analyzer.py  file_manager.py  hierarchical_extractor.py  hierarchy_converter.py  image_cropper.py  image_processor.py  layout_extractor.py  pdf_preprocessor.py  region_ocr_processor.py  structure_visualizer.py  text_extractor.py  utils.py
app/services/storage/: __init__.py  minio_client.py
app/tasks/: __init__.py  celery_app.py  document_tasks.py
tests/: conftest.py
tests/unit/core/: test_security.py
